# Local-Assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
deploy/systemd/: local-assistant-backup.service  local-assistant-backup.timer  local-assistant.service
docs/: architecture.md  integrations-apple.md  pi-agent-runbook.md  roadmap.md  setup-pi.md
scripts/: backup.sh  eval_run.py
src/local_assistant/: __init__.py  __main__.py  assistant.py  config.py  observability.py  util.py
src/local_assistant/agent/: __init__.py  orchestrator.py
src/local_assistant/db/: __init__.py  database.py  schema.sql
src/local_assistant/integrations/: __init__.py  icloud.py
src/local_assistant/llm/: __init__.py  client.py  models.py
src/local_assistant/memory/: __init__.py  store.py
src/local_assistant/scheduler/: __init__.py  jobs.py
src/local_assistant/telegram/: __init__.py  bot.py
src/local_assistant/tools/: __init__.py  mcp_server.py  registry.py
tests/: test_config.py  test_orchestrator.py
tests/eval/: eval_set.jsonl
